Criar tela de cadastro de artigo

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style/style.css">
     <title>Noticias</title>
 </head>
 <body>
@@ -15,9 +15,7 @@
                 <form action='ListarArtigo.do' method='get'>
                     <button class="btn-1" type='submit'>Ver noticias</button>
                 </form>
-                <form action='PublicarArtigo.do' method='get'>
-                    <button class="btn-2" type='submit'>Publicar</button>
-                </form>
+                <a class="btn-2" href="./CadastrarArtigo.html">Publicar</a>
             </nav>
         </div>
         <div class="img"></div>
